Correct bottom icons spacing

--- a/style.scss
+++ b/style.scss
@@ -288,7 +288,7 @@ nav {
 }
 
 footer {
-  padding: 20px 0;
+  padding: 40px 0;
   text-align: center;
 
 }
